New hot-reload configuration with webpack. New code structure. New login templates.

--- a/webpack/dev_helpers/device_router.html
+++ b/webpack/dev_helpers/device_router.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="content-security-policy" content="default-src *; script-src &apos;self&apos; data: &apos;unsafe-inline&apos; &apos;unsafe-eval&apos; http://danigarcia-dev.com:10001; object-src &apos;self&apos; data: http://danigarcia-dev.com:10001; style-src &apos;self&apos; &apos;unsafe-inline&apos; data: ; img-src *; media-src &apos;self&apos; data: http://danigarcia-dev.com:10001; frame-src &apos;self&apos; data: http://danigarcia-dev.com:10001; font-src *; connect-src &apos;self&apos; data: http://danigarcia-dev.com:10001">
+<head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -76,11 +76,11 @@
 	</style>
 	
 </head>
-<body><script>const localServerIpPort = 'danigarcia-dev.com:10001'</script>
+<body>
 	
 	<div id="unavailable">
 		<p>
-			It seems we can&apos;t connect to<script>document.write(localServerIpPort)</script><br><br>
+			It seems we can't connect to <script>document.write(localServerIpPort)</script><br><br>
 			You can test yourself with next inputs:
 		</p>
 		
@@ -159,5 +159,5 @@
 		}
 		
 	</script>
-<script src="cordova.js"></script></body>
+</body>
 </html>
