Change logo image

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <div id="app"></div>
   <div id="app" style="background-color: white; position: absolute; top: 0; bottom: 0; right: 0; left: 0; width: 100%;">
 	  <!-- Properties "margin-top" and "margin-left" must be respectively half of the height and width of the image -->
-	  <img id="splash-screen" style="position:fixed; top:50%; left:50%; margin-top:-250px; margin-left:-250px;" src="./static/icon.png"> 
+	  <img id="splash-screen" style="position:fixed; top:50%; left:50%; margin-top:-113px; margin-left:-113px;" src="./static/f7-logo.png"> 
   </div>
   <!-- built script files will be auto injected -->
 </body>
